--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="add_links">Add Links</string>
     <string name="share">Share</string>
+    <string name="app_name">MLSurvey</string>
 </resources>
