--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="add_links">Add Links</string>
     <string name="share">Share</string>
     <string name="app_name">MLSurvey</string>
+    <string name="launcher_name">MLSurvey</string>
+    <string name="activity_name">MLSurvey</string>
 </resources>
